[gd_scene load_steps=4 format=3 uid="uid://b2igj5pwxc2ru"]

[ext_resource type="PackedScene" uid="uid://by6wnvuc2iitb" path="res://Secondary_Scenes/sign_UI.tscn" id="1_f88qt"]
[ext_resource type="Script" path="res://Scripts/sign_area.gd" id="1_qd60r"]

[sub_resource type="CircleShape2D" id="CircleShape2D_71utx"]
radius = 93.0215

[node name="sign_area" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_qd60r")
titleText = "tile"
bodyText = "body text"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 64)
shape = SubResource("CircleShape2D_71utx")

[node name="sign_UI" parent="." instance=ExtResource("1_f88qt")]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
